# robucar-simulation

./: .rosinstall  README.md  setup.sh
.metadata/.plugins/org.eclipse.ui.workbench/: workbench.xml  workingsets.xml
bags/: recto-lento-asfalto_2012-11-22-13-46-30.bag  recto-rapido-asfalto_2012-11-22-13-49-28.bag  recto-rapido-grava_2012-11-22-13-43-19.bag
sandbox/: setup.sh
sandbox/gps_novatel/: CMakeLists.txt  manifest.xml
sandbox/gps_novatel/.svn/: all-wcprops  dir-prop-base  entries
sandbox/gps_novatel/src/: gpsNovatel.cpp
sandbox/robucar/: stack.xml
sandbox/robucar/robucar_description/: mainpage.dox  manifest.xml  plot.txt
sandbox/robucar/robucar_gazebo_plugins/: .cproject  .project  .pydevproject  CMakeLists.txt  CMakeLists.txt~  cmake_install.cmake  mainpage.dox  (+2 more)
sandbox/rosbucar/: CMakeLists.txt  mainpage.dox
sandbox/rosbucar/.svn/: all-wcprops  dir-prop-base  entries
sandbox/rosbucar/.svn/text-base/: manifest.xml.svn-base
sandbox/rosbucar/launch/: create_map-2.launch  create_map.launch  eva.launch  eva.yaml  parking-map.yaml  visualize-parking.launch
sandbox/rosbucar/launch/.svn/: all-wcprops  entries
sandbox/rosbucar/launch/.svn/text-base/: localization.launch.svn-base  map.yaml.svn-base  parking-map.png.svn-base  tf_configuration.launch.svn-base
sandbox/rosbucar/msg/: CarLikeCmd.msg  CarLikeInfo.msg  DriveCmd.msg  DriveInfo.msg
sandbox/rosbucar/msg/.svn/: all-wcprops
sandbox/rosbucar/msg_gen/cpp/include/rosbucar/: CarLikeCmd.h  CarLikeInfo.h  DriveCmd.h  DriveInfo.h
sandbox/rosbucar/msg_gen/lisp/: CarLikeCmd.lisp  CarLikeInfo.lisp  DriveCmd.lisp  DriveInfo.lisp  _package.lisp  _package_CarLikeCmd.lisp  _package_CarLikeInfo.lisp  _package_DriveCmd.lisp  _package_DriveInfo.lisp  rosbucar-msg.asd
sandbox/rosbucar/src/: PureDiffDevice.cpp  PureDirectoryDevice.h  PureDriveDevice.h  PureGpsDevice.cpp  PureGpsDevice.cpp~  PureLaserDevice.h  PureLocalizationDevice.cpp  VirtualCrabDevice.cpp  car2odom.cpp  get_services.cpp  localization2tf.cpp
sandbox/rosbucar/src/.svn/: all-wcprops  dir-prop-base  entries
sandbox/rosbucar/src/.svn/text-base/: PureCarDevice.cpp.svn-base  PureCarDevice.h.svn-base  PureDevice.cpp.svn-base  PureDevice.h.svn-base  PureDiffDevice.h.svn-base  PureDirectoryDevice.cpp.svn-base  PureDriveDevice.cpp.svn-base  PureFrame.h.svn-base  PureGpsDevice.cpp.svn-base  PureGpsDevice.h.svn-base  PureLaserDevice.cpp.svn-base  PureLocalizationDevice.h.svn-base  PureManager.cpp.svn-base  PureManager.h.svn-base  RosbuCar.cpp.svn-base  TCPTransceiver.cpp.svn-base  TCPTransceiver.h.svn-base  VirtualCrabDevice.h.svn-base  clock.cpp.svn-base  repair_scan.cpp.svn-base
sandbox/rosbucar/src/rosbucar/msg/: _CarLikeCmd.py  _CarLikeInfo.py  _DriveCmd.py  _DriveInfo.py  __init__.py
(+99 files in other folders)
